--- a/INSTALL
+++ b/INSTALL
@@ -18,7 +18,7 @@ Prerequisites
 FatFind currently depends on a few external libraries.
 These are:
 
- * GTK2 >= 2.8
+ * GTK+ >= 2.8
  * libglade2 >= 2.5.1
  * ltilib (CVS)
  * Diamond (CVS)
