--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,8 @@
 FatFind: A Diamond application for adipocyte image exploration
-Copyright (c) 2006 Carnegie Mellon University. All rights reserved.
+Version 1
+
+Copyright (c) 2006 Carnegie Mellon University
+All rights reserved.
 
 
 Adam Goode
